--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -1,6 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=rpuser
 spring.datasource.password=rppass
-spring.datasource.url=jdbc:postgresql://localhost:5432/reportportal
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgresql
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
-logging.level.root=trace
+spring.jpa.hibernate.ddl=false
