--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ dependencies {
     compile 'org.postgresql:postgresql'
     compile 'org.jooq:jooq'
     compile 'org.jasypt:jasypt:1.9.2'
+    compile("org.springframework.boot:spring-boot-starter-amqp")
 
     compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'commons-validator:commons-validator:1.6'
