--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,9 @@ logging.level.org.hibernate.SQL=debug
 
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+jsa.rabbitmq.queue=jsa.queue
