--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=rpuser
 spring.datasource.password=rppass
 spring.datasource.initialization-mode=always
@@ -6,3 +7,5 @@ spring.datasource.platform=postgresql
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl=false
+
+datastore.default.path=d:\\epam\\report-portal\\data\
