--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,4 @@ spring.rabbitmq.password=guest
 jsa.rabbitmq.queue=jsa.queue
 
 datastore.default.path=/data/storage
+datastore.seaweed.url=http://localhost:8080
