Updated according to CR note.

--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -7,4 +7,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl=false
 
-datastore.default.path=d:\\epam\\report-portal\\data\
+datastore.default.path=/data/storage
