update health endpoint configuration
Signed-off-by: avarabyeu <andrei.varabyeu@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,14 @@ security.oauth2.client.clientSecret=internal_man
 security.sessions=never
 security.basic.enabled=false
 management.contextPath=/admin
-management.security.enabled=false
+management.security.enabled=true
 endpoints.enabled=false
 endpoints.info.enabled=true
 endpoints.info.sensitive=false
-endpoints.health.enabled=true   
-endpoints.health.sensitive=true
+endpoints.health.enabled=true
+endpoints.health.sensitive=false
 endpoints.jmx.enabled=true
+spring.cloud.discovery.client.health-indicator.include-description=false
 rp.mongo.uri=mongodb://localhost:27017
 rp.mongo.dbName=reportportal
 rp.mongo.connectionsPerHost=50
