Ps migrations filestorage (#317)
* Updated log handler to store files locally

* Updated log handler to store files locally

* Added file delete

* Added seaweed data store.

* Updated test for seaweed store

* Remove todo

* Updated seaweed store test to use testcontainers

* removed unused url

* Updated according to CR note.

--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -6,3 +6,5 @@ spring.datasource.platform=postgresql
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl=false
+
+datastore.default.path=/data/storage
