--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 jsa.rabbitmq.queue=jsa.queue
+
+datastore.default.path=/data/storage
+datastore.seaweed.url=http://localhost:8080
