adjust configs for clean screenshot job

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,13 @@ security.oauth2.client.clientSecret=internal_man
 security.sessions=never
 security.basic.enabled=false
 management.contextPath=/admin
-management.security.enabled=true
+management.security.enabled=false
 endpoints.enabled=false
 endpoints.info.enabled=true
 endpoints.info.sensitive=false
-endpoints.health.enabled=true
-endpoints.health.sensitive=false
+endpoints.health.enabled=true   
+endpoints.health.sensitive=true
 endpoints.jmx.enabled=true
-spring.cloud.discovery.client.health-indicator.include-description=false
 rp.mongo.uri=mongodb://localhost:27017
 rp.mongo.dbName=reportportal
 rp.mongo.connectionsPerHost=50
@@ -49,6 +48,8 @@ com.ta.reportportal.job.clean.screenshots.cron=PT1H
 #CRON expression for project setting 'keep logs' as every 14 days
 #com.ta.reportportal.job.clean.logs.cron=P14D
 com.ta.reportportal.job.clean.logs.cron=PT1H
+#Count of threads to be used to process logs cleanup
+com.ta.reportportal.job.clean.logs.threads=5
 #Expire account after X days
 rp.auth.expire.account.after=5
 ## EMail Server configuration (temporary solution)
