--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -6,3 +6,9 @@ spring.datasource.platform=postgresql
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl=false
+
+generator.datasource.url: jdbc:postgresql://localhost:5432/reportportal
+generator.default.generator.name=org.jooq.util.DefaultGenerator
+generator.package.name=com.epam.ta.reportportal.store.jooq
+generator.directory=src/main/java
+generator.schema=public
