--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Edgware.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Edgware.SR3"
         mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.9.RELEASE"
     }
 }
@@ -71,14 +71,14 @@ configurations {
 
 dependencies {
     if (releaseMode) {
-        compile 'com.epam.reportportal:commons-dao:4.1.2'
-        compile 'com.epam.reportportal:commons-rules:4.0.1'
-        compile 'com.epam.reportportal:commons-model:4.0.4'
+        compile 'com.epam.reportportal:commons-dao:4.2.0'
+        compile 'com.epam.reportportal:commons-rules:4.2.0'
+        compile 'com.epam.reportportal:commons-model:4.2.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:a8ae834')
-        compile('com.github.reportportal:commons-rules:a3f8055')
-        compile 'com.github.reportportal:commons-model:3dae3ad'
+        compile('com.github.reportportal:commons-dao:4.2.0')
+        compile('com.github.reportportal:commons-rules:4.2.0')
+        compile 'com.github.reportportal:commons-model:4.2.0'
         compile('com.github.reportportal:commons:3.1.0')
     }
 
