[Gradle Release Plugin] - new version commit:  '4.2.1-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=4.2.0
+version=4.2.1-SNAPSHOT
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=unix:///var/run/docker.sock
