EPMRPP-34483 impement and document deployments scripts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,17 +47,17 @@ rp.email.debug=false
 rp.email.account=
 rp.email.password=
 
+spring.application.name=api
+info.build.version=4.0n
+
 #show sql statement
 logging.level.org.hibernate.SQL=debug
 
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.host=${RABBIT_HOST:localhost}
+spring.rabbitmq.port=${RABBIT_PORT:5672}
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 jsa.rabbitmq.queue=jsa.queue
-
-datastore.default.path=/data/storage
-datastore.seaweed.url=http://localhost:8080
