--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,7 +48,7 @@ rp.email.account=
 rp.email.password=
 
 spring.application.name=api
-info.build.version=4.0n
+info.build.version=${rp.api.version:4.0}
 
 #show sql statement
 logging.level.org.hibernate.SQL=debug
@@ -56,8 +56,8 @@ logging.level.org.hibernate.SQL=debug
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.rabbitmq.host=${RABBIT_HOST:localhost}
-spring.rabbitmq.port=${RABBIT_PORT:5672}
+spring.rabbitmq.host=${rp.rabbit.host:localhost}
+spring.rabbitmq.port=${rp.rabbit.port:5672}
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 jsa.rabbitmq.queue=jsa.queue
