--- a/src/main/resources/datastore.properties
+++ b/src/main/resources/datastore.properties
@@ -1,5 +1,5 @@
-datastore.default.path=${DATASTORE_DEFAULT_PATH:/data/storage}
-datastore.seaweed.master.host=${DATASTORE_MASTER_HOST:localhost}
-datastore.seaweed.master.port=${DATASTORE_MASTER_PORT:9333}
+datastore.default.path=${rp.binarystore.path:/data/storage}
+datastore.seaweed.master.host=${rp.binarystore.master.host:localhost}
+datastore.seaweed.master.port=${rp.binarystore.master.port:9333}
 # could be one of [seaweed, filesystem]
-datastore.type=${DATASTORE_TYPE:filesystem}
+datastore.type=${rp.binarystore.type:filesystem}
