--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,15 +1,3 @@
-## You can generate a custom docker compose file automatically on http://reportportal.io/download (Step 2)
-
-## This is example of Docker Compose for ReportPortal
-## Do not forget to configure data volumes for production usage
-
-## Execute 'docker-compose -p reportportal up -d --force-recreate'
-## to start all containers in daemon mode
-## Where:
-##      '-p reportportal' -- specifies container's prefix (project name)
-##      '-d' -- enables daemon mode
-##      '--force-recreate' -- forces re-recreating of all containers
-
 version: '2'
 
 services:
@@ -59,10 +47,10 @@ services:
       - seaweed-volume
     environment:
       - JAVA_OPTS=-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
-      - RABBIT_HOST=rabbitmq
-      - DATASTORE_MASTER_HOST=seaweed-master
-      - DATASTORE_TYPE=seaweed
-      - DATASOURCE_URL=jdbc:postgresql://postgres:5432/reportportal
+      - RP_RABBIT_HOST=rabbitmq
+      - RP_BINARYSTORE_MASTER_HOST=seaweed-master
+      - RP_BINARYSTORE_TYPE=seaweed
+      - RP_DB_URL=jdbc:postgresql://postgres:5432/reportportal
     restart: always
     ports:
        - "8585:8585"
