--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,17 +47,17 @@ rp.email.debug=false
 rp.email.account=
 rp.email.password=
 
+spring.application.name=api
+info.build.version=${rp.api.version:4.0}
+
 #show sql statement
 logging.level.org.hibernate.SQL=debug
 
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.host=${rp.rabbit.host:localhost}
+spring.rabbitmq.port=${rp.rabbit.port:5672}
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 jsa.rabbitmq.queue=jsa.queue
-
-datastore.default.path=/data/storage
-datastore.seaweed.url=http://localhost:8080
