fix launch query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,12 +49,11 @@ rp.email.password=
 
 spring.application.name=api
 info.build.version=${rp.api.version:4.0}
-
-#show sql statement
-logging.level.org.hibernate.SQL=debug
-
-#show sql values
-logging.level.org.hibernate.type.descriptor.sql=trace
+##show sql statement
+#logging.level.org.hibernate.SQL=debug
+#
+##show sql values
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.rabbitmq.host=${rp.rabbit.host:localhost}
 spring.rabbitmq.port=${rp.rabbit.port:5672}
