--- a/build.gradle
+++ b/build.gradle
@@ -107,8 +107,12 @@ dependencies {
         //compile('com.github.reportportal:commons-dao:4.0.0')
         compile 'com.github.reportportal:commons-rules:spb2-SNAPSHOT'
         compile 'com.github.reportportal:commons-model:e1b39f7'
-        compile('com.github.reportportal:commons:3.1.0')
+        compile('com.github.reportportal:commons:526633e')
     }
+
+
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+
 
     compile 'org.apache.commons:commons-lang3:3.7'
 
