--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl=false
 
-generator.datasource.url: jdbc:postgresql://localhost:5432/reportportal
+generator.datasource.url=jdbc:postgresql://localhost:5432/reportportal
 generator.default.generator.name=org.jooq.util.DefaultGenerator
 generator.package.name=com.epam.ta.reportportal.store.jooq
 generator.directory=src/main/java
