--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -6,7 +6,7 @@ COPY gradle/ ./gradle
 COPY gradlew .
 RUN ./gradlew wrapper
 
-COPY build-quality.gradle build.gradle gradlew settings.gradle ./
+COPY build-quality.gradle build.gradle gradlew settings.gradle gradle.properties ./
 RUN ./gradlew resolveDependencies --stacktrace
 
 COPY . ./
