--- a/docker/Dockerfile-develop
+++ b/docker/Dockerfile-develop
@@ -30,7 +30,7 @@ exec java $JAVA_OPTS -jar $JAVA_APP' > /start.sh && chmod +x /start.sh"
 
 VOLUME /tmp
 
-ADD @name@-@version@.jar app.jar
+ADD service-api.jar app.jar
 RUN sh -c 'touch /app.jar'
 
 EXPOSE 8080
