more updates on dev dockerfile
Signed-off-by: avarabyeu <andrei.varabyeu@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -240,7 +240,7 @@ task resolveDependencies() {
 }
 
 bootJar {
-    archiveName = "${baseName}-${appendix}.${extension}"
+    archiveName = "${baseName}.${extension}"
 }
 
 test {
