fix rabbit URLs
Signed-off-by: avarabyeu <andrei.varabyeu@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,7 +36,7 @@ spring:
       ddl-auto: none
 
   rabbitmq:
-    addresses: ${rp.amqp.uri}
+    addresses: ${rp.amqp.addresses}
 logging:
   level:
 #    org.springframework.context.support: warn
