--- a/src/main/resources/application-dev-mac.yaml
+++ b/src/main/resources/application-dev-mac.yaml
@@ -1,6 +1,5 @@
-spring:
 rp:
+  amqp:
+    addresses: amqp://guest:guest@localhost:5672
   db:
     url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
-  amqp:
-    url: amqp://guest:guest@localhost:5672
