--- a/build.gradle
+++ b/build.gradle
@@ -99,9 +99,10 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile('com.github.reportportal:commons-dao:8d609c1')
+        compile('com.github.reportportal:commons-dao:aaaa302')
         compile 'com.github.reportportal:commons-rules:spb2-SNAPSHOT'
         compile 'com.github.reportportal:commons-model:6391d01'
+        compile 'com.github.reportportal:commons-bugtracking:d688656'
         compile('com.github.reportportal:commons:71d4aca')
     }
 
