--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,5 @@ rp.email.password=
 logging.level.org.hibernate.SQL=debug
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.profiles.active=consul, dev-mac
