--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,6 +49,7 @@ rp.email.password=
 #show sql statement
 logging.level.org.hibernate.SQL=debug
 #show sql values
-logging.level.org.hibernate.type.descriptor.sql=trace
-
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.springframework.orm.jpa=debug
+logging.level.org.springframework.transaction=trace
 spring.profiles.active=consul, dev-mac
