introduce flushing all data configurable job

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,8 @@ rp.cache.ticket.expiration=5
 rp.cache.user.size=1000
 rp.cache.user.expiration=60
 
+com.ta.reportportal.rp.flushing.time.cron=${RP_ENVIRONMENT_VARIABLE_FLUSHING_TIME}
+
 ## Supported period format details
 ## https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-
 #CRON expression for project setting 'interrupt launches' as every 1 hours
