--- a/build.gradle
+++ b/build.gradle
@@ -172,6 +172,9 @@ dependencies {
 
     compile "com.querydsl:querydsl-jpa:4.2.1"
 
+    //plugins
+    compile 'org.pf4j:pf4j:2.4.0'
+
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
