--- a/build.gradle
+++ b/build.gradle
@@ -99,10 +99,9 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:7141642'
-        compile 'com.github.reportportal:commons-rules:spb2-SNAPSHOT'
-        compile 'com.github.reportportal:commons-model:d9e245f'
-        compile 'com.github.reportportal:commons-bugtracking:496a571'
+        compile 'com.github.reportportal:commons-dao:818663d'
+        compile 'com.github.reportportal:commons-rules:4cd20af'
+        compile 'com.github.reportportal:commons-model:ed81944'
         compile('com.github.reportportal:commons:71d4aca')
     }
 
