Acl fix code review issues

--- a/build.gradle
+++ b/build.gradle
@@ -151,7 +151,7 @@ dependencies {
     compile 'org.springframework.security:spring-security-oauth2-client'
     compile 'org.springframework.security:spring-security-jwt'
     compile 'org.springframework.security:spring-security-acl'
-    compile 'net.sf.ehcache:ehcache-core:2.6.11'
+    compile 'com.github.ben-manes.caffeine:caffeine:2.6.2'
 
 ///// end of Security
 
