--- a/build.gradle
+++ b/build.gradle
@@ -99,10 +99,11 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:818663d'
+        compile 'com.github.reportportal:commons-dao:993542a'
         compile 'com.github.reportportal:commons-rules:4cd20af'
-        compile 'com.github.reportportal:commons-model:ed81944'
+        compile 'com.github.reportportal:commons-model:149b853'
         compile('com.github.reportportal:commons:71d4aca')
+        compile('com.github.reportportal:plugin-api:5dc955e808')
     }
 
 
