Integration builder refactoring. Compatibility fixes

--- a/build.gradle
+++ b/build.gradle
@@ -99,13 +99,15 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:bf56717'
+        compile 'com.github.reportportal:commons-dao:fbda059'
+        compile 'com.github.reportportal:commons-model:7ffbf4e'
         compile 'com.github.reportportal:commons-rules:4cd20af'
-        compile 'com.github.reportportal:commons-model:149b853'
         compile('com.github.reportportal:commons:71d4aca')
-        compile('com.github.reportportal:plugin-api:5dc955e808')
+        compile('com.github.reportportal:plugin-api:43c7d0c')
     }
 
+    compile('com.atlassian.fugue:fugue:2.6.1')
+    compile('com.atlassian.jira:jira-rest-java-client-core:4.0.0')
 
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 
