--- a/build.gradle
+++ b/build.gradle
@@ -99,15 +99,17 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:fbda059'
+        compile 'com.github.reportportal:commons-dao:4b10bcd'
         compile 'com.github.reportportal:commons-model:7ffbf4e'
         compile 'com.github.reportportal:commons-rules:4cd20af'
         compile('com.github.reportportal:commons:71d4aca')
-        compile('com.github.reportportal:plugin-api:43c7d0c')
+        compile('com.github.reportportal:plugin-api:7a9a353')
     }
 
+    //move this to the plugin-api
     compile('com.atlassian.fugue:fugue:2.6.1')
     compile('com.atlassian.jira:jira-rest-java-client-core:4.0.0')
+    //*****************************
 
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 
@@ -171,7 +173,8 @@ dependencies {
     compile 'io.springfox:springfox-swagger-ui'
     compile 'io.springfox:springfox-swagger2'
 
-    compile 'com.google.guava:guava'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 
     api 'org.jacoco:org.jacoco.agent:0.7.7.201606060606'
 
