--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,7 +60,7 @@ springfox:
 ##########################################
 rp:
   amqp:
-    addresses: amqp://rabbitmq:rabbitmq@localhost:5672
+    addresses: amqp://guest:guest@localhost:5672
   db:
     url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
   upload:
