--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,13 +60,13 @@ springfox:
 ##########################################
 rp:
   amqp:
-    addresses: amqp://guest:guest@localhost:5672
+    addresses: amqp://rabbitmq:rabbitmq@rabbitmq:5672
   db:
-    url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
+    url: jdbc:postgresql://postgres:5432/reportportal?user=rpuser&password=rppass
   upload:
     maxUploadSize: 128MB
     maxFileSize: 64MB
   analytics:
     enableByDefault: true
   plugins:
-    path: C:\Users\Ihar_Kahadouski\IdeaProjects\service-api\plugins
+    path: /plugins
