Add rabbit management client

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,9 +60,10 @@ springfox:
 ##########################################
 rp:
   amqp:
-    addresses: amqp://rabbitmq:rabbitmq@rabbitmq:5672
+    addresses: amqp://guest:guest@localhost:5672
+    api-address: http://localhost:15672/api
   db:
-    url: jdbc:postgresql://postgres:5432/reportportal?user=rpuser&password=rppass
+    url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
   upload:
     maxUploadSize: 128MB
     maxFileSize: 64MB
