--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.2.RELEASE'
+        springBootVersion = '2.1.0.RELEASE'
         springCloudVersion = 'Finchley.M9'
     }
     repositories {
@@ -71,7 +71,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom "com.github.reportportal:commons-bom:71b7ca8"
+        mavenBom "com.github.reportportal:commons-bom:44ec962"
     }
 }
 
@@ -99,13 +99,17 @@ dependencies {
         compile 'com.epam.reportportal:commons-model:4.0.0'
         compile 'com.epam.reportportal:commons:3.1.0'
     } else {
-        compile 'com.github.reportportal:commons-dao:a2dacf8'
+        compile 'com.github.reportportal:commons-dao:31362caf'
         compile 'com.github.reportportal:commons-rules:4cd20af'
-        compile 'com.github.reportportal:commons-model:5a84982'
+        compile 'com.github.reportportal:commons-model:3fe351f'
         compile('com.github.reportportal:commons:71d4aca')
         compile('com.github.reportportal:plugin-api:5dc955e808')
     }
 
+    //move this to the plugin-api
+    compile('com.atlassian.fugue:fugue:2.6.1')
+    compile('com.atlassian.jira:jira-rest-java-client-core:4.0.0')
+    //*****************************
 
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
 
@@ -121,6 +125,8 @@ dependencies {
     compile 'org.jooq:jooq-meta:3.11.4'
     compile 'org.jasypt:jasypt:1.9.2'
     compile("org.springframework.boot:spring-boot-starter-amqp")
+    // Optional for spring-boot-starter-amqp
+    compile "com.rabbitmq:http-client:2.1.0.RELEASE"
 
     compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'commons-validator:commons-validator:1.6'
@@ -169,7 +175,8 @@ dependencies {
     compile 'io.springfox:springfox-swagger-ui'
     compile 'io.springfox:springfox-swagger2'
 
-    compile 'com.google.guava:guava'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+    compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 
     api 'org.jacoco:org.jacoco.agent:0.7.7.201606060606'
 
