--- a/src/main/resources/application-dev-win.yaml
+++ b/src/main/resources/application-dev-win.yaml
@@ -10,6 +10,6 @@ rp:
   analyzer:
     url: http://localhost:8080/analyzer
   db:
-    url: jdbc:postgresql://localhost:5432/reportportal?user=postgres&password=pass
+    url: jdbc:postgresql://localhost:5432/reportportal?user=rpuser&password=rppass
   amqp:
     url: amqp://guest:guest@localhost:5672
